added POST PUT and DELETE apis
